--- a/css/variables.css
+++ b/css/variables.css
@@ -110,7 +110,7 @@
   --bp-2xl: 1536px;
 
   /* ---- Nav ---- */
-  --nav-height: 72px;
+  --nav-height: 80px;
 
   /* ---- Dark Nav (matches original Webflow site) ---- */
   --nav-bg: #001412;
